--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -8,7 +8,7 @@
 
 background {
     monitor =
-    path = $HOME/aesthetic-wallpapers/images/anime_skyline.png   # only png supported for now
+    path = $HOME/.local/share/wallpapers/digital/a_car_with_trees_on_it.png   # only png supported for now
     
 }
 
